# HuffmanCodingTool

./: .clang-format  CMakeLists.txt  CMakePresets.json  License  README.md
Tests/: CMakeLists.txt  test_huffman.cpp
cmake/: FetchCatch2.cmake
data/: semple.huff  semple.txt
include/: FrequencyTable.hpp  UIHelper.hpp  fileManager.hpp  huffman.hpp
src/: FrequencyTable.cpp  UIHelper.cpp  fileManager.cpp  huffman.cpp  main.cpp
